--- a/languages.toml
+++ b/languages.toml
@@ -9,3 +9,6 @@ formatter = { command = "black", args = ["--quiet", "-"] }
 auto-format = true
 roots = ["pyproject.toml"]
 language-servers = [ "pyright" ]
+
+[language-server.jdtls]
+command = "/home/jesus/.local/share/nvim/mason/bin/jdtls"
